--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "Kevin Binu Thottumkal",
@@ -12,9 +12,14 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@jest/globals": "^29.7.0",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.1"
+  },
+  "devDependencies": {
     "@apollo/server": "^4.12.1",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
-    "sqlite3": "^5.1.7"
+    "jest": "^29.7.0"
   }
 }
